[gd_scene load_steps=2 format=3 uid="uid://cwm8hj2y8pu5v"]

[ext_resource type="Script" path="res://scripts/debug/claude_client_test.gd" id="1_a2fvx"]

[node name="ClaudeClientTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a2fvx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ClaudeClient Test Scene"
horizontal_alignment = 1

[node name="ResponseLabel" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Response will appear here..."
fit_content = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TestButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/TestButtons"]
layout_mode = 2
text = "Quick Tests:"

[node name="NormalButton" type="Button" parent="VBoxContainer/TestButtons"]
layout_mode = 2
text = "Normal Input"

[node name="InjectionButton" type="Button" parent="VBoxContainer/TestButtons"]
layout_mode = 2
text = "Test Injection"

[node name="LongButton" type="Button" parent="VBoxContainer/TestButtons"]
layout_mode = 2
text = "Long Input"

[node name="InputLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Your Message:"

[node name="InputField" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
placeholder_text = "Type your message here..."
wrap_mode = 1

[node name="SendButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Send to Claude"

[node name="StatsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Tokens: 0 in / 0 out | Cost: $0.0000"

[connection signal="pressed" from="VBoxContainer/TestButtons/NormalButton" to="." method="_on_test_normal_pressed"]
[connection signal="pressed" from="VBoxContainer/TestButtons/InjectionButton" to="." method="_on_test_injection_pressed"]
[connection signal="pressed" from="VBoxContainer/TestButtons/LongButton" to="." method="_on_test_long_pressed"]
